# nexus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_plans_sessions_and_session_id_fks.py
deploy/: deploy.sh  install-service.sh
docs/: plan.md  schema.md  structure.md  use_case_language_learning.md
nexus/: config.py  settings.py
nexus/architect/: __init__.py  interview.py  persist.py  prompts.py
nexus/clients/: cli.py  telegram.py
nexus/clients/web/: __init__.py  app.py  auth.py  deps.py
nexus/clients/web/static/: app.js  (+3 more)
nexus/config/: __init__.py  loaders.py
nexus/config/domains/: fitness.yaml
nexus/config/prompts/: architect_system.md  specialist_system.md  summarize_fitness.md  summarize_language_learning.md
nexus/db/: engine.py  models.py  repository.py
nexus/domains/: base.py  language_learning.yaml  registry.py
nexus/llm/: __init__.py  anthropic.py  base.py  gemini.py
nexus/specialist/: __init__.py  agent.py  context.py  prompts.py  session.py  summarizer.py
nexus/workers/: timeout.py
tests/: conftest.py  test_config_loaders.py  test_gemini_client.py  test_settings_shell_rc.py  test_smoke.py  test_telegram_chunker.py  test_telegram_markdown.py
tests/integration/: _scripted_llm.py  test_architect_flow.py  test_fitness_domain.py  test_plans_sessions.py  test_repository.py  test_specialist_flow.py  test_telegram_inline_keyboard.py  test_telegram_repo.py  test_timeout_sweeper.py  test_web_api.py
